setting up classes for burger menu animation

--- a/index.html
+++ b/index.html
@@ -30,21 +30,21 @@
       <ul class="nav-list">
         <li><a href="#!">My Schedule & Bidding</a></li>
         <li><a href="#!">Safety</a></li>
-        <ul class="nav-dropdown">
+        <ul class="parent-nav">
           <li class="sub-item"><a href="#!">Reporting</a></li>
-          <ul class="nav-dropdown">
+          <ul class="parent-nav">
             <li class="sub-item"><a href="#!">I-21 Injury Reporting</a></li>
             <li class="sub-item"><a href="#!">ASAP Reporting</a></li>
             <li class="sub-item"><a href="#!">General ASAP Information</a></li>
             <li class="sub-item"><a href="#!">Flight Attendant Incident Report</a></li>
           </ul>
-          <li><a href="#!">Agriculture & Customs</a></li>
-          <li><a href="#!">Known Crewmember</a></li>
-          <li><a href="#!">Product Safety Data Search</a></li>
+          <li class="sub-item"><a href="#!">Agriculture & Customs</a></li>
+          <li class="sub-item"><a href="#!">Known Crewmember</a></li>
+          <li class="sub-item"><a href="#!">Product Safety Data Search</a></li>
         </ul>
         <li><a href="#!">Training</a></li>
         <li><a href="#!">Administration</a></li>
-        <ul class="nav-dropdown">
+        <ul class="parent-nav">
           <li class="sub-item"><a href="#!">OJI and Leaves</a></li>
           <li class="sub-item"><a href="#!">Pay and Benefits</a></li>
           <li class="sub-item"><a href="#!">Performance</a></li>
@@ -71,7 +71,9 @@
         <img src="./images/calendar.svg" height="30" />
         <a href="#">Administration</a></li>
       <li class="toggle">
-        <span class="cls"></span>
+        <span class="burger-menu"></span>
+        <span class="burger-menu"></span>
+        <span class="burger-menu"></span>
         <a href="#">More</a></li>
     </ul>
   
