--- a/index.html
+++ b/index.html
@@ -26,55 +26,72 @@
         <img src="./images/alaska-airlines.svg" height="30" />
 
       </div>
+
       
       <ul class="nav-list">
-        <li><a href="#!">My Schedule & Bidding</a></li>
-        <li><a href="#!">Safety</a></li>
-        <ul class="parent-nav">
-          <li class="sub-item"><a href="#!">Reporting</a></li>
+        <!-- <li><a href="#!">My Schedule & Bidding</a></li> -->
+
+        <!-- SAFETY SUB MENU -->
+        <ul class="parent-nav safety hide">
+
+          <li class="parent-menu" id="reporting"><a href="#!">Reporting</a></li>
           <ul class="parent-nav">
-            <li class="sub-item"><a href="#!">I-21 Injury Reporting</a></li>
-            <li class="sub-item"><a href="#!">ASAP Reporting</a></li>
-            <li class="sub-item"><a href="#!">General ASAP Information</a></li>
-            <li class="sub-item"><a href="#!">Flight Attendant Incident Report</a></li>
+            <li class="sub-item reporting-item hide"><a href="#!">I-21 Injury Reporting</a></li>
+            <li class="sub-item reporting-item hide"><a href="#!">ASAP Reporting</a></li>
+            <li class="sub-item reporting-item hide"><a href="#!">General ASAP Information</a></li>
+            <li class="sub-item reporting-item hide"><a href="#!">Flight Attendant Incident Report</a></li>
           </ul>
-          <li class="sub-item"><a href="#!">Agriculture & Customs</a></li>
-          <li class="sub-item"><a href="#!">Known Crewmember</a></li>
-          <li class="sub-item"><a href="#!">Product Safety Data Search</a></li>
+          <li class="sub-item "><a href="#!">Agriculture & Customs</a></li>
+          <li class="sub-item "><a href="#!">Known Crewmember</a></li>
+          <li class="sub-item "><a href="#!">Product Safety Data Search</a></li>
+        </ul>    
+
+        
+
+        <!-- ADMIN SUB MENU -->
+        <ul class="parent-nav admin">
+          <ul class="parent-nav">
+            <li class="sub-item admin-item hide"><a href="#!">OJI and Leaves</a></li>
+            <li class="sub-item admin-item hide"><a href="#!">Pay and Benefits</a></li>
+            <li class="sub-item admin-item hide"><a href="#!">Performance</a></li>
+            <li class="sub-item admin-item hide"><a href="#!">Inflight Resource Directory</a></li>
+            <li class="sub-item admin-item hide"><a href="#!">Mobile and Web</a></li>
+            <li class="sub-item admin-item hide"><a href="#!">AFA</a></li>
+          </ul>
         </ul>
-        <li><a href="#!">Training</a></li>
-        <li><a href="#!">Administration</a></li>
-        <ul class="parent-nav">
-          <li class="sub-item"><a href="#!">OJI and Leaves</a></li>
-          <li class="sub-item"><a href="#!">Pay and Benefits</a></li>
-          <li class="sub-item"><a href="#!">Performance</a></li>
-          <li class="sub-item"><a href="#!">Inflight Resource Directory</a></li>
-          <li class="sub-item"><a href="#!">Mobile and Web</a></li>
-          <li class="sub-item"><a href="#!">AFA</a></li>
-        </ul>
-        <li><a href="#!">Catering & Brand</a></li>
-        <li><a href="#!">Hotels</a></li>
-        <li><a href="#!">My Base</a></li>
-        <li><a href="#!">Recognition</a></li>
-        <li><a href="#!">My Leadership Team</a></li>
+
+        <!-- items not in bottom bar -->
+        <ul class="overflow-menu hide">
+          <li><a href="#!">Training</a></li>
+          <li><a href="#!">Catering & Brand</a></li>
+          <li><a href="#!">Hotels</a></li>
+          <li><a href="#!">My Base</a></li>
+          <li><a href="#!">Recognition</a></li>
+          <li><a href="#!">My Leadership Team</a></li>
+        </u>
       </ul>
     </nav>
   
     <ul class="bottom-nav">
-      <li>
-        <img src="./images/calendar.svg" height="30" />
-        <a href="#" class="active">My Schedule & Bidding</a></li>
-      <li>
-        <img src="./images/calendar.svg" height="30" />
-        <a href="#">Safety</a></li>
-      <li>
-        <img src="./images/calendar.svg" height="30" />
-        <a href="#">Administration</a></li>
+      <li id="schedule-bottom-bar">
+        <img src="./images/calendar-white.svg" height="30" />
+        <a href="#">My Schedule & Bidding</a>
+      </li>
+
+      <li id="safety-bottom-bar">
+        <img src="./images/horn.svg" height="30" />
+        <a href="#!">Safety</a>
+      </li>
+
+      <li id="admin-bottom-bar">
+        <img src="./images/person.svg" height="30" />
+        <a href="#">Administration</a>
+      </li>
+
       <li class="toggle">
-        <span class="burger-menu"></span>
-        <span class="burger-menu"></span>
-        <span class="burger-menu"></span>
-        <a href="#">More</a></li>
+        <img src="./images/burger-white.svg" height="30" />
+        <a href="#">More</a>
+      </li>
     </ul>
   
   </div>
