--- a/index.html
+++ b/index.html
@@ -78,22 +78,70 @@
   
     <ul class="bottom-nav">
       <li id="schedule-bottom-bar">
-        <img src="./images/calendar-white.svg" height="30" />
+        <?xml version="1.0" encoding="UTF-8"?>
+        <svg width="18px" height="20px" viewBox="0 0 18 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+          <!-- Generator: Sketch 51.2 (57519) - http://www.bohemiancoding.com/sketch -->
+          <title>Shape</title>
+          <desc>Created with Sketch.</desc>
+          <defs></defs>
+          <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+            <g id="calendar" fill="#FFFFFF" fill-rule="nonzero">
+              <path d="M0,4 C0,2.9 0.9,2 2,2 L16,2 C17.1045695,2 18,2.8954305 18,4 L18,18 C18,19.1045695 17.1045695,20 16,20 L2,20 C0.8954305,20 2.22044605e-16,19.1045695 0,18 L0,4 Z M2,6 L2,18 L16,18 L16,6 L2,6 Z M4,0 L6,0 L6,2 L4,2 L4,0 Z M12,0 L14,0 L14,2 L12,2 L12,0 Z M4,9 L6,9 L6,11 L4,11 L4,9 Z M4,13 L6,13 L6,15 L4,15 L4,13 Z M8,9 L10,9 L10,11 L8,11 L8,9 Z M8,13 L10,13 L10,15 L8,15 L8,13 Z M12,9 L14,9 L14,11 L12,11 L12,9 Z M12,13 L14,13 L14,15 L12,15 L12,13 Z"
+                id="Shape"></path>
+            </g>
+          </g>
+        </svg>
         <a href="#">My Schedule & Bidding</a>
       </li>
 
       <li id="safety-bottom-bar">
-        <img src="./images/horn.svg" height="30" />
+        <?xml version="1.0" encoding="UTF-8"?>
+        <svg width="18px" height="20px" viewBox="0 0 18 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+          <!-- Generator: Sketch 51.2 (57519) - http://www.bohemiancoding.com/sketch -->
+          <title>Shape</title>
+          <desc>Created with Sketch.</desc>
+          <defs></defs>
+          <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+            <g id="announcement" fill="#FFFFFF" fill-rule="nonzero">
+              <path d="M2,6 C2,4.9 2.9,4 4,4 L12,4 L16,0 L18,0 L18,16 L16,16 L12,12 L4,12 C2.8954305,12 2,11.1045695 2,10 L0,10 L0,6 L2,6 Z M10,15 L10,20 L7,20 L5.33,15 L4,15 L4,13 L12,13 L12,15 L10,15 Z"
+                id="Shape"></path>
+            </g>
+          </g>
+        </svg>
         <a href="#!">Safety</a>
       </li>
 
       <li id="admin-bottom-bar">
-        <img src="./images/person.svg" height="30" />
+        <?xml version="1.0" encoding="UTF-8"?>
+        <svg width="20px" height="20px" viewBox="0 0 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+          <!-- Generator: Sketch 51.2 (57519) - http://www.bohemiancoding.com/sketch -->
+          <title>Shape</title>
+          <desc>Created with Sketch.</desc>
+          <defs></defs>
+          <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+            <g id="user-solid-circle" fill="#FFFFFF" fill-rule="nonzero">
+              <path d="M10,20 C4.4771525,20 6.76353751e-16,15.5228475 0,10 C-6.76353751e-16,4.4771525 4.4771525,1.01453063e-15 10,0 C15.5228475,3.38176876e-16 20,4.4771525 20,10 C20,15.5228475 15.5228475,20 10,20 Z M7,6 L7,8 C7,9.65685425 8.34314575,11 10,11 C11.6568542,11 13,9.65685425 13,8 L13,6 C13,4.34314575 11.6568542,3 10,3 C8.34314575,3 7,4.34314575 7,6 Z M3.35,14.44 C4.83466163,16.6600535 7.32925898,17.9928099 10,17.9928099 C12.670741,17.9928099 15.1653384,16.6600535 16.65,14.44 C12.4284381,12.5021113 7.57156194,12.5021113 3.35,14.44 Z"
+                id="Shape"></path>
+            </g>
+          </g>
+        </svg>
         <a href="#">Administration</a>
       </li>
 
       <li class="toggle">
-        <img src="./images/burger-white.svg" height="30" />
+        <?xml version="1.0" encoding="UTF-8"?>
+        <svg width="28px" height="20px" viewBox="0 0 28 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+          <!-- Generator: Sketch 51.2 (57519) - http://www.bohemiancoding.com/sketch -->
+          <title>Slice 1</title>
+          <desc>Created with Sketch.</desc>
+          <defs></defs>
+          <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+            <g id="burger" fill="#FFFFFF" fill-rule="nonzero">
+              <path d="M2,4 L26,4 C27.104,4 28,3.104 28,2 C28,0.896 27.104,0 26,0 L2,0 C0.896,0 0,0.896 0,2 C0,3.104 0.896,4 2,4 Z M26,8 L2,8 C0.896,8 0,8.896 0,10 C0,11.104 0.896,12 2,12 L26,12 C27.104,12 28,11.104 28,10 C28,8.896 27.104,8 26,8 Z M26,16 L2,16 C0.896,16 0,16.896 0,18 C0,19.104 0.896,20 2,20 L26,20 C27.104,20 28,19.104 28,18 C28,16.896 27.104,16 26,16 Z"
+                id="Shape"></path>
+            </g>
+          </g>
+        </svg>
         <a href="#">More</a>
       </li>
     </ul>
