--- a/index.html
+++ b/index.html
@@ -77,15 +77,18 @@
         </ul>
 
         <!-- items not in bottom bar -->
-        <ul class="overflow-menu hide">
-          <li><a href="#!">Training</a></li>
-          <li><a href="#!"  class="menu-has-children">Catering & Brand</a></li>
-          <li><a href="#!">Hotels</a></li>
-          <li><a href="#!">My Base</a></li>
-          <li><a href="#!">Recognition</a></li>
-          <li><a href="#!">My Leadership Team</a></li>
+        <ul class="parent-nav overflow">
+          <ul class="parent-nav">
+            <li class="sub-item hide"><a href="#!">Training</a></li>
+            <li class="sub-item hide"><a href="#!"  class="menu-has-children">Catering & Brand</a></li>
+            <li class="sub-item hide"><a href="#!">Hotels</a></li>
+            <li class="sub-item hide"><a href="#!">My Base</a></li>
+            <li class="sub-item hide"><a href="#!">Recognition</a></li>
+            <li class="sub-item hide"><a href="#!">My Leadership Team</a></li>
+          </ul>
         </u>
       </ul>
+
     </nav>
   
     <ul class="bottom-nav">
@@ -140,7 +143,7 @@
         <a href="#">Administration</a>
       </li>
 
-      <li class="toggle">
+      <li class="overflow-target">
         <?xml version="1.0" encoding="UTF-8"?>
         <svg width="28px" height="20px" viewBox="0 0 28 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
           <!-- Generator: Sketch 51.2 (57519) - http://www.bohemiancoding.com/sketch -->
