added slide in and fixed bottom nav bar issues

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <ul class="parent-nav">
 
             <li class="sub-item menu-has-children hide " id="reporting"><a href="#!">Reporting</a></li>
-            <ul class="sub-parent-nav hide">
+            <ul class="sub-parent-nav">
               <li class="sub-item reporting-item hide"><a href="#!">I-21 Injury Reporting</a></li>
               <li class="sub-item reporting-item hide"><a href="#!">ASAP Reporting</a></li>
               <li class="sub-item reporting-item hide"><a href="#!">General ASAP Information</a></li>
