additions to help manage fake-state and the switches bewteen the bottom bar

--- a/index.html
+++ b/index.html
@@ -49,17 +49,36 @@
           
           <ul class="parent-nav">
 
-            <li class="sub-item menu-has-children hide " id="reporting"><a href="#!">Reporting</a></li>
-            <ul class="sub-parent-nav">
-              <li class="sub-item reporting-item hide"><a href="#!">I-21 Injury Reporting</a></li>
-              <li class="sub-item reporting-item hide"><a href="#!">ASAP Reporting</a></li>
-              <li class="sub-item reporting-item hide"><a href="#!">General ASAP Information</a></li>
-              <li class="sub-item reporting-item hide"><a href="#!">Flight Attendant Incident Report</a></li>
+            <li class="sub-item menu-has-children hide " id="reporting">
+              <a href="#!">Reporting</a>
+              <ul class="sub-parent-nav">
+                <li class="sub-item reporting-item hide">
+                  <a href="#!">I-21 Injury Reporting</a>
+                </li>
+                <li class="sub-item reporting-item hide">
+                  <a href="#!">ASAP Reporting</a>
+                </li>
+                <li class="sub-item reporting-item hide">
+                  <a href="#!">General ASAP Information</a>
+                </li>
+                <li class="sub-item reporting-item hide">
+                  <a href="#!">Flight Attendant Incident Report</a>
+                </li>
+              </li>
             </ul>
-            <li class="sub-item menu-has-children hide"><a href="#!">Agriculture & Customs</a></li>
-            <li class="sub-item hide"><a href="#!">Known Crewmember</a></li>
-            <li class="sub-item hide"><a href="#!">Product Safety Data Search</a></li>
-          </ul>    
+            <li class="sub-item menu-has-children hide" id="agCustoms">
+              <a href="#!">Agriculture & Customs</a>
+              <ul class="sub-parent-nav">
+                <li class="sub-item hide">
+                  <a href="#!">Known Crewmember</a>
+                </li>
+                <li class="sub-item hide">
+                  <a href="#!">Product Safety Data Search</a>
+                </li>
+              </ul>    
+            </li>
+
+          </ul>
         </ul>
 
         
@@ -67,12 +86,24 @@
         <!-- ADMIN SUB MENU -->
         <ul class="parent-nav admin">
           <ul class="parent-nav">
-            <li class="sub-item admin-item menu-has-children hide"><a href="#!">OJI and Leaves</a></li>
-            <li class="sub-item admin-item menu-has-children hide"><a href="#!">Pay and Benefits</a></li>
-            <li class="sub-item admin-item hide menu-has-children"><a href="#!">Performance</a></li>
-            <li class="sub-item admin-item hide"><a href="#!">Inflight Resource Directory</a></li>
-            <li class="sub-item admin-item menu-has-children hide"><a href="#!">Mobile and Web</a></li>
-            <li class="sub-item admin-item hide"><a href="#!">AFA</a></li>
+            <li class="sub-item admin-item menu-has-children hide">
+              <a href="#!">OJI and Leaves</a>
+            </li>
+            <li class="sub-item admin-item menu-has-children hide">
+              <a href="#!">Pay and Benefits</a>
+            </li>
+            <li class="sub-item admin-item hide menu-has-children">
+              <a href="#!">Performance</a>
+            </li>
+            <li class="sub-item admin-item hide">
+              <a href="#!">Inflight Resource Directory</a>
+            </li>
+            <li class="sub-item admin-item menu-has-children hide"
+            ><a href="#!">Mobile and Web</a>
+            </li>
+            <li class="sub-item admin-item hide">
+              <a href="#!">AFA</a>
+            </li>
           </ul>
         </ul>
 
