added inline svg icons for the plus sign to expand menus

--- a/index.html
+++ b/index.html
@@ -37,10 +37,57 @@
         <!-- SCHEDULE SUB MENU -->
         <ul class="parent-nav schedule">
           <ul class="parent-nav">
-            <li class="sub-item schedule-item menu-has-children hide"><a href="#!">My Schedule</a></li>
-            <li class="sub-item schedule-item menu-has-children hide"><a href="#!">Vacation Days</a></li>
-            <li class="sub-item schedule-item hide menu-has-children"><a href="#!">Sick Days</a></li>
-            <li class="sub-item schedule-item hide"><a href="#!">Holidays</a></li>
+            <li class="sub-item schedule-item hide">
+              <a href="#!">My Schedule
+                <?xml version="1.0" encoding="UTF-8"?>
+                <svg class="expand-menu" viewBox="0 0 10 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                  <!-- Generator: Sketch 51.2 (57519) - http://www.bohemiancoding.com/sketch -->
+                  <title>add-outline</title>
+                  <desc>Created with Sketch.</desc>
+                  <defs></defs>
+                  <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                    <g id="add-outline" fill="#FFFFFF" fill-rule="nonzero">
+                      <polygon id="Shape" points="6 4 10 4 10 6 6 6 6 10 4 10 4 6 0 6 0 4 4 4 4 0 6 0"></polygon>
+                    </g>
+                  </g>
+                </svg>
+              </a>
+            </li>
+            <li class="sub-item schedule-item hide">
+              <a href="#!">Vacation Days
+                <?xml version="1.0" encoding="UTF-8"?>
+                <svg class="expand-menu" viewBox="0 0 10 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                  <!-- Generator: Sketch 51.2 (57519) - http://www.bohemiancoding.com/sketch -->
+                  <title>add-outline</title>
+                  <desc>Created with Sketch.</desc>
+                  <defs></defs>
+                  <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                    <g id="add-outline" fill="#FFFFFF" fill-rule="nonzero">
+                      <polygon id="Shape" points="6 4 10 4 10 6 6 6 6 10 4 10 4 6 0 6 0 4 4 4 4 0 6 0"></polygon>
+                    </g>
+                  </g>
+                </svg>
+              </a>
+            </li>
+            <li class="sub-item schedule-item hide">
+              <a href="#!">Sick Days
+                <?xml version="1.0" encoding="UTF-8"?>
+                <svg class="expand-menu" viewBox="0 0 10 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                  <!-- Generator: Sketch 51.2 (57519) - http://www.bohemiancoding.com/sketch -->
+                  <title>add-outline</title>
+                  <desc>Created with Sketch.</desc>
+                  <defs></defs>
+                  <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                    <g id="add-outline" fill="#FFFFFF" fill-rule="nonzero">
+                      <polygon id="Shape" points="6 4 10 4 10 6 6 6 6 10 4 10 4 6 0 6 0 4 4 4 4 0 6 0"></polygon>
+                    </g>
+                  </g>
+                </svg>
+              </a>
+            </li>
+            <li class="sub-item schedule-item hide">
+              <a href="#!">Holidays</a>
+            </li>
           </ul>
         </ul>
 
@@ -49,8 +96,21 @@
           
           <ul class="parent-nav">
 
-            <li class="sub-item menu-has-children hide " id="reporting">
-              <a href="#!">Reporting</a>
+            <li class="sub-item hide " id="reporting">
+              <a href="#!">Reporting
+                <?xml version="1.0" encoding="UTF-8"?>
+                <svg class="expand-menu" viewBox="0 0 10 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                  <!-- Generator: Sketch 51.2 (57519) - http://www.bohemiancoding.com/sketch -->
+                  <title>add-outline</title>
+                  <desc>Created with Sketch.</desc>
+                  <defs></defs>
+                  <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                    <g id="add-outline" fill="#FFFFFF" fill-rule="nonzero">
+                      <polygon id="Shape" points="6 4 10 4 10 6 6 6 6 10 4 10 4 6 0 6 0 4 4 4 4 0 6 0"></polygon>
+                    </g>
+                  </g>
+                </svg>
+              </a>
               <ul class="sub-parent-nav">
                 <li class="sub-item reporting-item hide">
                   <a href="#!">I-21 Injury Reporting</a>
@@ -66,8 +126,21 @@
                 </li>
               </li>
             </ul>
-            <li class="sub-item menu-has-children hide" id="agCustoms">
-              <a href="#!">Agriculture & Customs</a>
+            <li class="sub-item hide" id="agCustoms">
+              <a href="#!">Agriculture & Customs
+                <?xml version="1.0" encoding="UTF-8"?>
+                <svg class="expand-menu" viewBox="0 0 10 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                  <!-- Generator: Sketch 51.2 (57519) - http://www.bohemiancoding.com/sketch -->
+                  <title>add-outline</title>
+                  <desc>Created with Sketch.</desc>
+                  <defs></defs>
+                  <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                    <g id="add-outline" fill="#FFFFFF" fill-rule="nonzero">
+                      <polygon id="Shape" points="6 4 10 4 10 6 6 6 6 10 4 10 4 6 0 6 0 4 4 4 4 0 6 0"></polygon>
+                    </g>
+                  </g>
+                </svg>
+              </a>
               <ul class="sub-parent-nav">
                 <li class="sub-item hide">
                   <a href="#!">Known Crewmember</a>
@@ -86,20 +159,72 @@
         <!-- ADMIN SUB MENU -->
         <ul class="parent-nav admin">
           <ul class="parent-nav">
-            <li class="sub-item admin-item menu-has-children hide">
-              <a href="#!">OJI and Leaves</a>
+            <li class="sub-item admin-item hide">
+              <a href="#!">OJI and Leaves
+                <?xml version="1.0" encoding="UTF-8"?>
+                <svg class="expand-menu" viewBox="0 0 10 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                  <!-- Generator: Sketch 51.2 (57519) - http://www.bohemiancoding.com/sketch -->
+                  <title>add-outline</title>
+                  <desc>Created with Sketch.</desc>
+                  <defs></defs>
+                  <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                    <g id="add-outline" fill="#FFFFFF" fill-rule="nonzero">
+                      <polygon id="Shape" points="6 4 10 4 10 6 6 6 6 10 4 10 4 6 0 6 0 4 4 4 4 0 6 0"></polygon>
+                    </g>
+                  </g>
+                </svg>
+              </a>
             </li>
-            <li class="sub-item admin-item menu-has-children hide">
-              <a href="#!">Pay and Benefits</a>
+            <li class="sub-item admin-item hide">
+              <a href="#!">Pay and Benefits
+                <?xml version="1.0" encoding="UTF-8"?>
+                <svg class="expand-menu" viewBox="0 0 10 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                  <!-- Generator: Sketch 51.2 (57519) - http://www.bohemiancoding.com/sketch -->
+                  <title>add-outline</title>
+                  <desc>Created with Sketch.</desc>
+                  <defs></defs>
+                  <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                    <g id="add-outline" fill="#FFFFFF" fill-rule="nonzero">
+                      <polygon id="Shape" points="6 4 10 4 10 6 6 6 6 10 4 10 4 6 0 6 0 4 4 4 4 0 6 0"></polygon>
+                    </g>
+                  </g>
+                </svg>
+              </a>
             </li>
-            <li class="sub-item admin-item hide menu-has-children">
-              <a href="#!">Performance</a>
+            <li class="sub-item admin-item hide">
+              <a href="#!">Performance
+                <?xml version="1.0" encoding="UTF-8"?>
+                <svg class="expand-menu" viewBox="0 0 10 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                  <!-- Generator: Sketch 51.2 (57519) - http://www.bohemiancoding.com/sketch -->
+                  <title>add-outline</title>
+                  <desc>Created with Sketch.</desc>
+                  <defs></defs>
+                  <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                    <g id="add-outline" fill="#FFFFFF" fill-rule="nonzero">
+                      <polygon id="Shape" points="6 4 10 4 10 6 6 6 6 10 4 10 4 6 0 6 0 4 4 4 4 0 6 0"></polygon>
+                    </g>
+                  </g>
+                </svg>
+              </a>
             </li>
             <li class="sub-item admin-item hide">
               <a href="#!">Inflight Resource Directory</a>
             </li>
-            <li class="sub-item admin-item menu-has-children hide"
-            ><a href="#!">Mobile and Web</a>
+            <li class="sub-item admin-item hide"
+            ><a href="#!">Mobile and Web
+              <?xml version="1.0" encoding="UTF-8"?>
+              <svg class="expand-menu" viewBox="0 0 10 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                <!-- Generator: Sketch 51.2 (57519) - http://www.bohemiancoding.com/sketch -->
+                <title>add-outline</title>
+                <desc>Created with Sketch.</desc>
+                <defs></defs>
+                <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                  <g id="add-outline" fill="#FFFFFF" fill-rule="nonzero">
+                    <polygon id="Shape" points="6 4 10 4 10 6 6 6 6 10 4 10 4 6 0 6 0 4 4 4 4 0 6 0"></polygon>
+                  </g>
+                </g>
+              </svg>
+            </a>
             </li>
             <li class="sub-item admin-item hide">
               <a href="#!">AFA</a>
@@ -110,12 +235,37 @@
         <!-- items not in bottom bar -->
         <ul class="parent-nav overflow">
           <ul class="parent-nav">
-            <li class="sub-item hide"><a href="#!">Training</a></li>
-            <li class="sub-item hide"><a href="#!"  class="menu-has-children">Catering & Brand</a></li>
-            <li class="sub-item hide"><a href="#!">Hotels</a></li>
-            <li class="sub-item hide"><a href="#!">My Base</a></li>
-            <li class="sub-item hide"><a href="#!">Recognition</a></li>
-            <li class="sub-item hide"><a href="#!">My Leadership Team</a></li>
+            <li class="sub-item hide">
+              <a href="#!">Training</a>
+            </li>
+            <li class="sub-item hide">
+              <a href="#!"  class="">Catering & Brand
+                <?xml version="1.0" encoding="UTF-8"?>
+                <svg class="expand-menu" viewBox="0 0 10 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                  <!-- Generator: Sketch 51.2 (57519) - http://www.bohemiancoding.com/sketch -->
+                  <title>add-outline</title>
+                  <desc>Created with Sketch.</desc>
+                  <defs></defs>
+                  <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                    <g id="add-outline" fill="#FFFFFF" fill-rule="nonzero">
+                      <polygon id="Shape" points="6 4 10 4 10 6 6 6 6 10 4 10 4 6 0 6 0 4 4 4 4 0 6 0"></polygon>
+                    </g>
+                  </g>
+                </svg>
+              </a>
+            </li>
+            <li class="sub-item hide">
+              <a href="#!">Hotels</a>
+            </li>
+            <li class="sub-item hide">
+              <a href="#!">My Base</a>
+            </li>
+            <li class="sub-item hide">
+              <a href="#!">Recognition</a>
+            </li>
+            <li class="sub-item hide">
+              <a href="#!">My Leadership Team</a>
+            </li>
           </ul>
         </u>
       </ul>
@@ -125,7 +275,7 @@
     <ul class="bottom-nav">
       <li id="schedule-bottom-bar">
         <?xml version="1.0" encoding="UTF-8"?>
-        <svg width="18px" height="20px" viewBox="0 0 18 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <svg viewBox="0 0 18 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
           <!-- Generator: Sketch 51.2 (57519) - http://www.bohemiancoding.com/sketch -->
           <title>Shape</title>
           <desc>Created with Sketch.</desc>
@@ -142,7 +292,7 @@
 
       <li id="safety-bottom-bar">
         <?xml version="1.0" encoding="UTF-8"?>
-        <svg width="18px" height="20px" viewBox="0 0 18 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <svg viewBox="0 0 18 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
           <!-- Generator: Sketch 51.2 (57519) - http://www.bohemiancoding.com/sketch -->
           <title>Shape</title>
           <desc>Created with Sketch.</desc>
@@ -159,7 +309,7 @@
 
       <li id="admin-bottom-bar">
         <?xml version="1.0" encoding="UTF-8"?>
-        <svg width="20px" height="20px" viewBox="0 0 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <svg viewBox="0 0 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
           <!-- Generator: Sketch 51.2 (57519) - http://www.bohemiancoding.com/sketch -->
           <title>Shape</title>
           <desc>Created with Sketch.</desc>
@@ -176,7 +326,7 @@
 
       <li class="overflow-target">
         <?xml version="1.0" encoding="UTF-8"?>
-        <svg width="28px" height="20px" viewBox="0 0 28 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <svg viewBox="0 0 28 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
           <!-- Generator: Sketch 51.2 (57519) - http://www.bohemiancoding.com/sketch -->
           <title>Slice 1</title>
           <desc>Created with Sketch.</desc>
@@ -195,6 +345,5 @@
   </div>
 </body>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="./script.js"></script>
 </html>
