updated safety page to match video

--- a/index.html
+++ b/index.html
@@ -146,12 +146,20 @@
               </a>
               <ul class="sub-parent-nav">
                 <li class="sub-item hide slide-up-fade-in">
-                  <a href="#!">Known Crewmember</a>
+                  <a href="#!">Bad Plants</a>
                 </li>
                 <li class="sub-item hide slide-up-fade-in">
-                  <a href="#!">Product Safety Data Search</a>
+                  <a href="#!">Customs List</a>
                 </li>
               </ul>    
+            </li>
+            <li class="sub-item hide slide-up-fade-in" id="agCustoms">
+              <a href="#!">Known Crewmember
+              </a>
+            </li>
+            <li class="sub-item hide slide-up-fade-in" id="agCustoms">
+              <a href="#!">Product Safety Data Search
+              </a>
             </li>
 
           </ul>
