removing slide toggles from js and leaving in html

--- a/index.html
+++ b/index.html
@@ -115,16 +115,16 @@
                 </svg>
               </a>
               <ul class="sub-parent-nav">
-                <li class="sub-item reporting-item hide">
+                <li class="sub-item reporting-item slide-down-fade-in hide">
                   <a href="#!">I-21 Injury Reporting</a>
                 </li>
-                <li class="sub-item reporting-item hide">
+                <li class="sub-item reporting-item slide-down-fade-in hide">
                   <a href="#!">ASAP Reporting</a>
                 </li>
-                <li class="sub-item reporting-item hide">
+                <li class="sub-item reporting-item slide-down-fade-in hide">
                   <a href="#!">General ASAP Information</a>
                 </li>
-                <li class="sub-item reporting-item hide">
+                <li class="sub-item reporting-item slide-down-fade-in hide">
                   <a href="#!">Flight Attendant Incident Report</a>
                 </li>
               </li>
@@ -145,10 +145,10 @@
                 </svg>
               </a>
               <ul class="sub-parent-nav">
-                <li class="sub-item hide slide-up-fade-in">
+                <li class="sub-item hide slide-down-fade-in">
                   <a href="#!">Bad Plants</a>
                 </li>
-                <li class="sub-item hide slide-up-fade-in">
+                <li class="sub-item hide slide-down-fade-in">
                   <a href="#!">Customs List</a>
                 </li>
               </ul>    
